rm invalid file